methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:12: error: ')' expected but '}' found.
} 
^