methods.slug.SlugTracking.scala.code
var depart = 0
def isFacingTrail():Boolean = {
  if(!estFaceMur()) {
    avance()
    return true
  }
	if((getCouleurSol() != Color.green) {
    recule()
    return false
  }
}